fixed spacing issues with header and footer

--- a/frontEnd/urbancanvas/src/Components/Multi.css
+++ b/frontEnd/urbancanvas/src/Components/Multi.css
@@ -3,6 +3,8 @@ width: 100%;
 height: auto;
 display: flex;
 flex-direction: row;
+margin-top: 13%;
+margin-bottom: 1.3%;
 }
 
 .map-container{
